# OpenOS

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  rustfmt.toml  x86_64-openos.json
.cargo/: config.toml
docs/: ADR.md  API.md
src/: main.rs
src/arch/x86_64/: gdt.rs  interrupts.rs  linker.ld  mod.rs  syscall.rs
src/drivers/: mod.rs  serial.rs  vga.rs
src/fs/: mod.rs
src/ipc/: mod.rs
src/memory/: allocator.rs  mod.rs
src/syscall/: mod.rs  number.rs
src/task/: mod.rs  scheduler.rs  task.rs  user.rs
