[package]
name = "openos"
version = "0.1.0"
edition = "2021"
authors = ["OpenOS Contributors"]
description = "A microkernel operating system written in Rust"
license = "MIT OR Apache-2.0"

[dependencies]
bootloader = "0.9"
volatile = "0.2"
spin = "0.9"
x86_64 = "0.15"
uart_16550 = "0.3"
pic8259 = "0.11"
pc-keyboard = "0.7"
linked_list_allocator = "0.10"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
lto = true
